--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,25 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <h1 class="display-1 pt-4 mt-sm-3">
+        <span class="text-black fw-normal">Lista de </span>
+        <span class="d-inline-flex align-items-center">
+          <span class="text-warning">Persona</span>
+          <img
+            class="flex-shrink-0 mt-2"
+            src="https://png.pngtree.com/png-clipart/20231006/original/pngtree-the-alphabet-letters-letter-s-png-image_13136544.png"
+            width="51"
+            alt="Image"
+          />
+        </span>
+      </h1>
+      <div class="container">
+        <ul id="nombres" class="list-group"></ul>
+      </div>
+
       <div class="fixed-bottom p-4">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://www.4geeksacademy.com">Criss</a>
       </div>
     </div>
   </body>
