--- a/src/index.html
+++ b/src/index.html
@@ -3,37 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Ups..</title>
+    <script src="./app.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="display-1 pt-4 mt-sm-3">
-        <span class="text-black fw-normal">Lista de </span>
-        <span class="d-inline-flex align-items-center">
-          <span class="text-warning">Persona</span>
-          <img
-            class="flex-shrink-0 mt-2"
-            src="https://png.pngtree.com/png-clipart/20231006/original/pngtree-the-alphabet-letters-letter-s-png-image_13136544.png"
-            width="51"
-            alt="Image"
-          />
-        </span>
-      </h1>
-      <div class="container">
-        <ul id="nombres" class="list-group"></ul>
-      </div>
-
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">Criss</a>
+    <div class="card mx-6">
+      <div class="card-body">
+        <div class="alert alert-success" role="alert">
+          <h4 class="alert-heading">Oh perdón!</h4>
+          <div id="excuse"> </div>
+          <hr />
+          <p class="mb-0">ok, no me creas!</p>
+        </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
