--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="card mx-6">
-      <div class="card-body">
+    <div class="card ">
+      <div class="card-body mx-6 d-flex justify-content-center">
         <div class="alert alert-success" role="alert">
           <h4 class="alert-heading">Oh perdón!</h4>
           <div id="excuse"> </div>
           <hr />
-          <p class="mb-0">ok, no me creas!</p>
+          <p class="text-danger mb-0">ok, no me creas!</p>
         </div>
       </div>
     </div>
